# berlin

./: .gitignore  .gitmodules  README.md  log  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
berlin/: Pipfile  backend_dict.py  code.py  code_type.py  commands.py  geoname.py  iata.py  locode.py  multicode.py  state.py  subdivision.py
data/locode/: .gitignore  README.md  notes.txt
scripts/: berliner
tests/: test_locode.py  test_multicode.py  test_nlp.py  test_split_locode.py  test_state.py  test_subdivision.py
tests/cases/: cases.txt
